# qt6ct

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  README  cmake_uninstall.cmake.in  qt6ct.pri  qt6ct.pro  qt6ct_release.sh  test.sh
.tx/: config
colors/: airy.conf  dusk.conf  sand.conf  simple.conf
qss/: fusion-fixes.qss
src/qt6ct/: CMakeLists.txt  appearancepage.cpp  appearancepage.h  appearancepage.ui  fontconfigdialog.cpp  fontconfigdialog.h  fontconfigdialog.ui  fontspage.cpp  fontspage.h  fontspage.ui  iconthemepage.cpp  iconthemepage.h  interfacepage.cpp  interfacepage.h  interfacepage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paletteeditdialog.cpp  paletteeditdialog.h  paletteeditdialog.ui  previewform.ui  qsseditordialog.cpp  qsseditordialog.h  qsspage.cpp  qsspage.h  qsspage.ui  qt6ct.cpp  qt6ct.desktop  qt6ct.h  qt6ct.pro  tabpage.cpp  tabpage.h  troubleshootingpage.cpp  troubleshootingpage.h  troubleshootingpage.ui
src/qt6ct-common/: CMakeLists.txt  qt6ct-common.pro  qt6ct.cpp  qt6ct.h
src/qt6ct-qtplugin/: CMakeLists.txt  main.cpp  qt6ct-qtplugin.pro  qt6ct.json  qt6ctplatformtheme.cpp  qt6ctplatformtheme.h
src/qt6ct-style/: CMakeLists.txt  plugin.cpp  qt6ct-style.pro  qt6ct.json  qt6ctproxystyle.cpp  qt6ctproxystyle.h
src/qt6ct/desktop-translations/: qt6ct_bg.desktop.in  qt6ct_ca.desktop.in  qt6ct_cs.desktop.in  qt6ct_da.desktop.in  qt6ct_de.desktop.in  qt6ct_el.desktop.in  qt6ct_es.desktop.in  qt6ct_es_ES.desktop.in  qt6ct_fi.desktop.in  qt6ct_fr.desktop.in  qt6ct_hu.desktop.in  qt6ct_it_IT.desktop.in  qt6ct_ja.desktop.in  qt6ct_nl_NL.desktop.in  qt6ct_pl.desktop.in  qt6ct_ru.desktop.in  qt6ct_tr.desktop.in  qt6ct_uk.desktop.in  qt6ct_zh_CN.desktop.in  qt6ct_zh_TW.desktop.in
src/qt6ct/translations/: qt6ct_ar.ts  qt6ct_bg.ts  qt6ct_ca.ts  qt6ct_cs.ts  qt6ct_da.ts  qt6ct_de.ts  qt6ct_el.ts  qt6ct_en.ts  qt6ct_es.ts  qt6ct_es_ES.ts  qt6ct_fi.ts  qt6ct_fr.ts  qt6ct_gl_ES.ts  qt6ct_he.ts  qt6ct_hu.ts  qt6ct_it.ts  qt6ct_it_IT.ts  qt6ct_ja.ts  qt6ct_kk.ts  qt6ct_lt.ts  qt6ct_nl.ts  qt6ct_nl_NL.ts  qt6ct_pl.ts  qt6ct_pt.ts  qt6ct_pt_BR.ts  qt6ct_ru.ts  qt6ct_sk.ts  qt6ct_sr.ts  qt6ct_sr_BA.ts  qt6ct_sr_RS.ts  qt6ct_tr.ts  qt6ct_uk.ts  qt6ct_uk_UA.ts  qt6ct_zh_CN.ts  qt6ct_zh_TW.ts  translations.qrc
utils/: update_ts.sh  update_tx.sh
